HHH-12001 - Allow ORM to be built with Java 9